# brainmamba

./: .gitignore  README.md  evaluate.sh  figure1-mermaid.txt  hardware.txt  paper.txt  pyproject.toml  requirements.txt  run.sh  setup.py  setup_venv.sh
brainmamba/: __init__.py
brainmamba/models/: __init__.py  bnmamba.py  brainmamba.py  btmamba.py  selective_ssm.py
brainmamba/utils/: __init__.py  connectivity.py
examples/: README.md  abide_classification.py  abide_dataset.py  classification_example.py  setup_abide.sh  simple_example.py
