[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainmamba"
version = "0.1.0"
description = "BrainMamba: A Selective State Space Model for Brain Dynamics"
readme = "README.md"
authors = [
    {name = "BrainMamba Team", email = "example@example.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/brainmamba"
"Bug Tracker" = "https://github.com/yourusername/brainmamba/issues" 